finished setting up user login

--- a/FRONTEND/vm_hris/src/index.css
+++ b/FRONTEND/vm_hris/src/index.css
@@ -17,7 +17,7 @@ code {
   src: url(PlayfairDisplay-Bold.ttf);
 }
 
-#logo {
+#logo, #loginTitle {
   font-family: Playfair Display-Bold;
   color: #007CC8;
 }
