Started rebuilding Employee Record page

--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -25,21 +25,30 @@ code {
   src: url(WorkSans-VariableFont_wght.ttf);
 }
 
-#logo, #loginTitle {
+#logo,
+#loginTitle {
   font-family: Gazpacho-Black;
-  color: #007CC8;
+  color: #007cc8;
 }
 
-#navbar, #content, #loginform, #forgotpassform, #dashfooter {
+#navbar,
+#content,
+#loginform,
+#forgotpassform,
+#dashfooter {
   font-family: WorkSans;
 }
 
 #employeePic {
-width: 200px;
-height: 200px;
+  width: 200px;
+  height: 200px;
 }
 
 #employeePicHeader {
   width: 40px;
   height: 40px;
+}
+
+label.form-label {
+  font-weight: 600 !important;
 }
